--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "@types/three": "^0.138.0",
+    "framer-motion": "^6.2.8",
+    "framer-motion-3d": "^6.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
