--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     ]
   },
   "devDependencies": {
+    "@react-hook/event": "^1.2.6",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
+    "prettier": "2.6.0",
     "tailwindcss": "^3.0.23"
   }
 }
