--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-  "name": "mito.web",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.5",
-    "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
-    "typescript": "4.6.4"
-  }
+    "name": "mito.web",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "next": "12.1.6",
+        "react": "18.1.0",
+        "react-device-detect": "^2.2.2",
+        "react-dom": "18.1.0"
+    },
+    "devDependencies": {
+        "@chakra-ui/react": "^2.1.2",
+        "@emotion/react": "^11.9.0",
+        "@emotion/styled": "^11.8.1",
+        "@types/gsap": "^3.0.0",
+        "@types/node": "17.0.35",
+        "@types/nprogress": "^0.2.0",
+        "@types/react": "18.0.9",
+        "@types/react-dom": "18.0.5",
+        "eslint": "8.16.0",
+        "eslint-config-next": "12.1.6",
+        "framer-motion": "^6.3.4",
+        "gsap": "^3.10.4",
+        "nprogress": "^0.2.0",
+        "typescript": "4.6.4"
+    }
 }
