--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "framer-motion": "^6.3.4",
         "gsap": "^3.10.4",
         "nprogress": "^0.2.0",
+        "tinykeys": "^1.4.0",
         "typescript": "4.6.4"
     }
 }
