--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "eslint-config-next": "12.1.6",
         "framer-motion": "^6.3.4",
         "gsap": "^3.10.4",
+        "kbar": "^0.1.0-beta.35",
         "nprogress": "^0.2.0",
         "tinykeys": "^1.4.0",
         "typescript": "4.6.4"
