--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,5 @@
         }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-    "exclude": ["node_modules", "public"]
+    "exclude": ["node_modules", "public", ".next"]
 }
