changes(change preloader, add contact, remove instagram, add mail, change title, upgrade)

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
     "printWidth": 80,
     "semi": true,
     "jsxSingleQuote": false,
-    "singleQuote": false
+    "singleQuote": false,
+    "trailingComma": "none"
 }
