--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "next": "12.1.6",
+        "next": "^12.2.3",
         "react": "^18.2.0",
         "react-device-detect": "^2.2.2",
         "react-dom": "^18.2.0"
@@ -29,6 +29,7 @@
         "gsap": "^3.10.4",
         "kbar": "^0.1.0-beta.35",
         "nprogress": "^0.2.0",
+        "prettier": "^2.7.1",
         "tinykeys": "^1.4.0",
         "typescript": "4.6.4"
     }
