--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
             "@lib/*": ["lib/*"],
             "@styles/*": ["styles/*"],
             "@hooks/*": ["hooks/*"],
+            "@theme": ["theme"],
             "@theme/*": ["theme/*"]
         }
     },
